<resources>
    <string name="app_name">My Application</string>

    <string name="login_e">LOGIN</string>
    <string name="login_k">로그인</string>
    <string name="input_email">이메일을 입력해주세요</string>
    <string name="input_pw">비밀번호를 입력해주세요</string>
    <string name="go_sign_up1">아직 회원이 아니신가요?</string>
    <string name="go_sign_up2">회원가입</string>

    <string name="sign_up_e">SIGN UP</string>
    <string name="input_name">닉네임을 입력해주세요</string>
    <string name="input_repw">비밀번호를 한번 더 입력해주세요</string>
    <string name="check">확인</string>
    <string name="go_login1">회원이신가요?</string>
    <string name="go_login2">로그인</string>

    <string name="profile">프로필</string>
    <string name="write">글쓰기</string>
    <string name="home">홈</string>

    <string name="test">8월 20일 ~ 23일까지\n신아인 밥 먹여주기.\n\n5만 포인트 드림\n크크\n맛있겠당 ~\n\n6시까지 저희 집으로 오세요 ㅋ\n\n많은 참여 바랍니당</string>

    <string name="title">제목</string>
    <string name="input_title">제목을 입력하세요.</string>
    <string name="point">포인트</string>
    <string name="input_point">포인트를 입력하세요.</string>
    <string name="content">내용</string>
    <string name="content_hint">내용을 입력하세요.\n정확한 정보 전달을 위해\n자세히 적어주세요.</string>
    <string name="upload">등록하기</string>

    <string name="point_e">Point</string>
    <string name="charging">충전하기</string>
    <string name="takeout">인출하기</string>
    <string name="write_list">글 작성내역</string>
    <string name="request">신청현황</string>

</resources>