<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.ui.LoginActivity">

        <TextView
            android:id="@+id/text_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/login_e"
            android:textColor="@color/main_color"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/input_email"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="28dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/input_email"
            android:paddingStart="20dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_login" />

        <EditText
            android:id="@+id/input_pw"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="28dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/input_pw"
            android:paddingStart="20dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_email" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="28dp"
            android:background="@drawable/btn_background"
            android:text="@string/login_k"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_pw" />

        <LinearLayout
            android:id="@+id/go_sing_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal|bottom"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_login">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/go_sign_up1"
                android:textColor="@color/gray2"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/go_sign_up2"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/arrow_right" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>