<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.seojunpark.android.presentation.viewmodel.WriteViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.ui.WriteActivity">

        <ImageView
            android:id="@+id/image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:scaleType="centerCrop"
            android:background="@drawable/camera_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/title"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image" />

        <EditText
            android:id="@+id/input_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="27dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="27dp"
            android:backgroundTint="@color/gray4"
            android:hint="@string/input_title"
            android:inputType="text"
            android:maxLines="1"
            android:text="@={viewModel.title}"
            android:textColorHint="@color/gray4"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_title" />

        <TextView
            android:id="@+id/text_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/point"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_title" />

        <EditText
            android:id="@+id/input_point"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="27dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="27dp"
            android:backgroundTint="@color/gray4"
            android:hint="@string/input_point"
            android:inputType="text"
            android:maxLines="1"
            android:text="@={viewModel.point}"
            android:textColorHint="@color/gray4"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_point" />

        <TextView
            android:id="@+id/text_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/content"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_point" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/input_content"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="27dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="27dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/content_background"
            android:gravity="top"
            android:hint="@string/content_hint"
            android:padding="20dp"
            android:text="@={viewModel.content}"
            android:textColorHint="@color/gray4"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_content"
            app:layout_constraintBottom_toTopOf="@id/btn"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginBottom="30dp"
            android:layout_marginEnd="28dp"
            android:background="@drawable/btn_background"
            android:text="@string/upload"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tab"/>

        <LinearLayout
            android:id="@+id/tab"
            android:layout_width="match_parent"
            android:layout_height="83dp"
            android:elevation="10dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <LinearLayout
                android:id="@+id/go_home"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@drawable/baseline_home" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/home"
                    android:textColor="@color/gray2"
                    android:textSize="10sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/go_write"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@drawable/round_border_color_click" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/write"
                    android:textColor="@color/main_color"
                    android:textSize="10sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/go_profile"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@drawable/baseline_account_circle" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/profile"
                    android:textColor="@color/gray2"
                    android:textSize="10sp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>